--- a/crown-clothing/src/component/menu-component/menu-item.scss
+++ b/crown-clothing/src/component/menu-component/menu-item.scss
@@ -29,6 +29,9 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
+      background-color: white;
+      opacity: 0.7;
+  
   
       .title {
         font-weight: bold;
