--- a/crown-clothing/src/component/menu-component/menu-item.scss
+++ b/crown-clothing/src/component/menu-component/menu-item.scss
@@ -7,9 +7,22 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
-    background-position: center;
-    background-size: cover;
+    overflow: hidden;
   
+
+    &:hover {
+      cursor: pointer;
+    
+      & .background-image {
+        transform: scale(1.1);
+        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      }
+    
+      & .content {
+        opacity: 0.9;
+      }
+    }
+
       &.large{
         height: 380px;
       }
@@ -19,6 +32,25 @@
   
     &:last-child {
       margin-left: 7.5px;
+    }
+
+    .background-image{
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;
+      &:hover {
+        cursor: pointer;
+      
+        & .background-image {
+          transform: scale(1.1);
+          transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+        }
+      
+        & .content {
+          opacity: 0.9;
+        }
+      }      
     }
   
     .content {
@@ -31,6 +63,7 @@
       border: 1px solid black;
       background-color: white;
       opacity: 0.7;
+      position: absolute;
   
   
       .title {
